force-app/main/default/objects/dw_syteline_work_center_schedule__x/dw_syteline_work_center_schedule__x.object-meta.xml
<CustomObject>
    <description>dw_syteline$work_center_schedule</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_syteline$work_center_schedule</externalName>
    <label>dw_syteline$work_center_schedule</label>
    <pluralLabel>dw_syteline$work_center_schedule</pluralLabel>
</CustomObject>