force-app/main/default/objects/dw_syteline_work_center_schedule__x/fields/bus_id__c.field-meta.xml
<CustomField>
    <fullName>bus_id__c</fullName>
    <description>bus_id</description>
    <externalDeveloperName>bus_id</externalDeveloperName>
    <label>bus_id</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>