force-app/main/default/objects/dw_syteline_work_center_schedule__x/fields/bus_seq_in_wk__c.field-meta.xml
<CustomField>
    <fullName>bus_seq_in_wk__c</fullName>
    <description>bus_seq_in_wk</description>
    <externalDeveloperName>bus_seq_in_wk</externalDeveloperName>
    <label>bus_seq_in_wk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>