force-app/main/default/objects/dw_syteline_work_center_schedule__x/fields/bus_start_wk__c.field-meta.xml
<CustomField>
    <fullName>bus_start_wk__c</fullName>
    <description>bus_start_wk</description>
    <externalDeveloperName>bus_start_wk</externalDeveloperName>
    <label>bus_start_wk</label>
    <type>Date</type>
</CustomField>