force-app/main/default/objects/dw_syteline_work_center_schedule__x/fields/fleet_id__c.field-meta.xml
<CustomField>
    <fullName>fleet_id__c</fullName>
    <description>fleet_id</description>
    <externalDeveloperName>fleet_id</externalDeveloperName>
    <label>fleet_id</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>