force-app/main/default/objects/dw_syteline_work_center_schedule__x/fields/work_center_dt__c.field-meta.xml
<CustomField>
    <fullName>work_center_dt__c</fullName>
    <description>work_center_dt</description>
    <externalDeveloperName>work_center_dt</externalDeveloperName>
    <label>work_center_dt</label>
    <type>Date</type>
</CustomField>