force-app/main/default/objects/dw_syteline_work_center_schedule__x/fields/work_center_sched_seq_nbr__c.field-meta.xml
<CustomField>
    <fullName>work_center_sched_seq_nbr__c</fullName>
    <description>work_center_sched_seq_nbr</description>
    <externalDeveloperName>work_center_sched_seq_nbr</externalDeveloperName>
    <label>work_center_sched_seq_nbr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>